frontend/app/css/app.css
.navbar {
    margin-bottom: 0;
}

.navbar-brand {
  float: left;
  height: 50px;
  padding: 15px 15px;
  font-size: 28px;
  line-height: 20px;
}


#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    margin-top: 51px;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: #000;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 200px;
}

#page-content-wrapper {
    width: 100%;
    position: absolute;
    padding: 15px;
}

#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    position: absolute;
    top: 51px;
    width: 200px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

@media(min-width:700px) {
    #wrapper {
        padding-left: 200px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

section {
    border-width: 1px;
    border-style: solid;
    border-color: #000000;
    padding: 20px;
    margin: 20px;
    background-color: #d6d6d6;
}

#homepage {
    margin-top: 52px;
}

#logout {
    position: fixed;
    top: 52px;
    left: -350px;
    height: 100%;
    background-color: #000;
    color: #999;
    transition: left .5s ease-in-out;
    z-index: 1;
}

#logout.show {
    left: 250px;
}

#login {
    position: fixed;
    top: 50px;
    left: -350px;
    height: 100%;
    background-color: #000;
    color: #999;
    transition: left .5s ease-in-out;
    z-index: 1;
}

#login.show {
    left: 250px;
}

#login.h3 {
    font-family: sans-serif;
    font-size: 22px;
    padding: 5px;
    margin: 20px;

}

#login.p {
    font-family: sans-serif;
    font-size: 12px;
    padding: 5px;
    margin: 20px;
}

#sign-up {
    position: fixed;
    top: 50px;
    left: -350px;
    height: 100%;
    background-color: #000;
    color: #999;
    transition: left .5s ease-in-out;
    z-index: 1;
}


#sign-up.show {
    left: 250px;
}

form {
    font-family: sans-serif;
    font-size: 12px;
    padding: 5px;
    margin: 20px;
}

input[type="text"] {
    width: 120px;
    border: 1px solid;
    padding: 3px;
    float: right;
}

input[type="password"] {
    width: 120px;
    border: 1px solid;
    padding: 3px;
    float: right;
}

input[type="email"] {
    width: 120px;
    border: 1px solid;
    padding: 3px;
    float: right;
}

label {
    float: left;
    margin-right: 10px;
}

.btn-flt-right {
    float: right;
}

.bring-button-down {
    margin-top: 50px;
}


#menu-toggle {
     margin-left: 250px;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#menu-toggle.toggled {
    margin-left: 51px;

}

#menu-toggle.toggledPopOut {
    margin-left: 500px;
}

#main-body {
    margin-left: 250px;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#main-body.toggled {
    margin-left: 51px;
}

#main-body.toggledPopOut {
    margin-left: 500px;
}

